# opera_onto

./: .cursorignore  .gitignore  BUGS.md  CHANGELOG.md  OPERA_ISA95_OWL_ONT_RICH.ontocsv  OPERA_ISA95_OWL_ONT_V10.csv  OPERA_ISA95_OWL_ONT_V13.csv  OPERA_ISA95_OWL_ONT_V5.csv  OPERA_ISA95_OWL_ONT_V6.csv  OPERA_ISA95_OWL_ONT_V7.csv  OPERA_ISA95_OWL_ONT_V8.csv  README.md  TKT-010-implementation-summary.md  analyze_downtime.py  bug1.txt  changelog_to_commit.py  combined_input.txt  create_debug_prompt.sh  create_ontology.py  create_ontology_V3_proposal.py  create_ontology_V4_refactor.py  create_ontology_V6.py  create_ontology_V7.py  debug_ontology_spec.md  debug_plan.md  debug_prompt copy.txt  debug_prompt.txt  debug_prompt_template.md  filter_log.txt  flattener.sh  import owlready2.py  main.py  migration_guide.md  mx_toothpaste_finishing_sample_100lines.csv  new_onto.py  ont_guide.txt  ontology_analyzer.py  ontology_definition.py  ontology_generator_minimal.txt  ontology_generator_serialized.txt  (+17 more)
Prompts/: combine.sh  (+11 more)
ontology_generator/: CHANGELOG.md  README.md  TKT-006-unused-properties-report.md  TKT-007-code-defined-properties-report.md  __init__.py  config.py  main.py  pyproject.toml  run_tests.py
ontology_generator/analysis/: __init__.py  population.py  sequence_analysis.py
ontology_generator/definition/: __init__.py  parser.py  structure.py
ontology_generator/population/: __init__.py  asset.py  core.py  equipment.py  events.py  linking.py  processing.py  row_processor.py  sequence.py
ontology_generator/scripts/: finds_unused_properties.py  ontology_analyzer.py
(+91 files in other folders)
